refactoring: into cleaner more domaine oriented architecture